crates/cadenza-syntax/src/generated/snapshots/cadenza_syntax__generated__test_data__invalid_parse__error_unexpected_rparen__invalid_parse_error_unexpected_rparen_ast.snap
---
source: crates/cadenza-syntax/src/generated/test_data.rs
expression: ")\n"
---
[
    Error(Error@0..1),
]
