crates/cadenza-syntax/src/generated/snapshots/cadenza_syntax__generated__test_data__invalid_parse__error_unexpected_rparen__invalid_parse_error_unexpected_rparen_lex.snap
---
source: crates/cadenza-syntax/src/generated/test_data.rs
expression: ")\n"
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 1,
            end: 2,
        },
        kind: Newline,
    },
]
